# elrond-nft-manager-sc

./: .gitignore  Cargo.toml  deploy-devnet.interaction.json  erdpy.data-storage.json
elrond-nft-simple-sc/: Cargo.toml
elrond-nft-simple-sc/mandos/: create_nft.scen.json  init.scen.json
elrond-nft-simple-sc/meta/: Cargo.toml
elrond-nft-simple-sc/meta/src/: main.rs
elrond-nft-simple-sc/src/: nft-simple-manager.rs
elrond-nft-simple-sc/wasm/: Cargo.toml
elrond-nft-simple-sc/wasm/src/: lib.rs
interaction/: snippets.sh
mandos/: _generated_init.scen.json  create_nft.scen.json  init.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: nft_manager.rs
tests/: mandos_go_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
