[package]
name = "elrond-nftmanager"
version = "0.0.0"
authors = [ "Ice <icegriffin1122@gmail.com>",]
edition = "2018"
publish = false

[lib]
path = "src/nft_manager.rs"

[dependencies.elrond-wasm]
version = "0.27.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
